--- a/session_6/ho/index.html
+++ b/session_6/ho/index.html
@@ -81,7 +81,7 @@
 			   data-direction="reverse">
 				Home
 			</a>
-			<h1>Five Star Hotels in Zedland</h1>
+			<h1>Zedland Hotels</h1>
 		</div>
 		<div data-role="content">
 			<h2>Hotels</h2>
@@ -141,7 +141,7 @@
 			   data-direction="reverse">
 				Home
 			</a>
-			<h1>Four Star Hotels in Zedland</h1>
+			<h1>Zedland Hotels</h1>
 		</div>
 		<div data-role="content">
 			<h2>Hotels</h2>
@@ -171,7 +171,7 @@
 			   data-direction="reverse">
 				Home
 			</a>
-			<h1>Three Star Hotels in Zedland</h1>
+			<h1>Zedland Hotels</h1>
 		</div>
 		<div data-role="content">
 			<h2>Hotels</h2>
