--- a/session_7/ho/implementation/index.html
+++ b/session_7/ho/implementation/index.html
@@ -113,35 +113,21 @@
     </div>
     <div data-role="content">
       <h2>Hotels</h2>
-      <ul data-role="listview"
-          data-inset="true"
-          data-filter="true"
-          data-filter-placeholder="Enter a Hotel Name">
-        <li>
+      <ul
+        id="hotellist"
+        data-role="listview"
+        data-inset="true"
+        data-filter="true"
+        data-filter-placeholder="Enter a Hotel Name">
+
+        <!-- <li>
           <a href="churchill-hotel.html"
              data-transition="slidefade"
              data-prefetch>
              Churchill Hotel
           </a>
-        </li>
-        <li>
-          <a href="crookston-hotel.html"
-             data-transition="slidefade">
-             Crookston Hotel
-          </a>
-        </li>
-        <li>
-          <a href="fox-hotel.html"
-             data-transition="slidefade">
-             Fox Hotel
-          </a>
-        </li>
-        <li>
-          <a href="newline-hotel.html"
-             data-transition="slidefade">
-             Newline Hotel
-          </a>
-        </li>
+        </li> -->
+
       </ul>
     </div>
     <div data-role="footer" data-position="fixed">
