--- a/session_7/ho/implementation/hotel.html
+++ b/session_7/ho/implementation/hotel.html
@@ -22,7 +22,7 @@
   <script src="js/main.js"></script>
 </head>
 <body>
-  <div data-role="page" id="newline">
+  <div data-role="page" id="hotelpage">
     <div data-role="header">
       <a href=""
          data-rel="back"
@@ -32,20 +32,11 @@
       <h1>Zedland Hotels</h1>
     </div>
     <div data-role="content">
-      <h2 id="hoteltitle">Newline Hotel</h2>
-      <ul>
-        <li>Genuine *****</li>
-        <li>Extra large rooms and suites</li>
-        <li>Designer furniture</li>
-        <li>Full size pool and full gym</li>
-        <li>Michelin star restaurant</li>
-      </ul>
-      <div id="nostorage"></div>
+      <h2 id="hoteltitle"></h2>
+      <div id="hotelid"></div>
+      <div id="contentArea"></div>
       <div class="favourites"></div>
-      <a
-        id="resbtn"
-        href="login.html"
-        class="ui-btn ui-icon-calendar ui-btn-icon-left ui-corner-all">
+      <a href="login.html" data-role="button" data-icon="action" id="resbtn">
         Reservation
       </a>
     </div>
